Revision history for Perl extension OpenGL::GLU.

0.02_01 TBD


0.02    2017-02-13 10:26:37-05:00
        - Change minimum perl version to 5.8


0.01    Sat Feb 11 14:38:50 2017
	- original version; created by h2xs 1.23 with options
		-O -F -DGL_OES_EGL_image=1 -d -n OpenGL::GLU -x -M '^(glu|GLU_)' glu.h
        - merged in GLU XS from OpenGL