@@ -15,7 +15,7 @@
 
 #include "const-c.inc"
 
-#if defined(HAVE_AGL_GLUT)
+#if defined(__APPLE__)
 #include <OpenGL/glu.h>
 #else
 #include <GL/glu.h>
