@@ -3,7 +3,11 @@
 #include "XSUB.h"
 #include "ppport.h"
 
+#if defined(__APPLE__)
+#include <OpenGL/gl.h>
+#else
 #include <GL/gl.h>
+#endif
 
 #ifndef GL_CMYK
 #define GL_CMYK GL_CMYK_EXT
